--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 amqp==5.3.1
 asgiref==3.9.1
 bcrypt==4.3.0
+bidict==0.23.1
 billiard==4.2.1
 blinker==1.9.0
 celery==5.5.3
@@ -23,7 +24,9 @@ Flask-Bcrypt==1.0.1
 Flask-Limiter==3.12
 Flask-Mail==0.10.0
 flask-mongoengine @ git+https://github.com/idoshr/flask-mongoengine.git@e244408acf440c4208f7ddcd6e5d819cb472e4da
+Flask-SocketIO==5.5.1
 greenlet==3.2.4
+h11==0.16.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
@@ -42,9 +45,12 @@ PyJWT==2.10.1
 pymongo==4.14.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+python-engineio==4.12.3
+python-socketio==5.14.3
 redis==6.4.0
 requests==2.32.4
 rich==13.9.4
+simple-websocket==1.1.0
 six==1.17.0
 typing_extensions==4.14.1
 tzdata==2025.2
@@ -53,3 +59,4 @@ vine==5.1.0
 wcwidth==0.2.13
 Werkzeug==3.1.3
 wrapt==1.17.2
+wsproto==1.2.0
